# projects-codespace

./: README.md
project-py/: README.md  pyproject.toml
project-py/app/: main.py
