[tool.poetry]
name = "project-py"
version = "0.1.0"
description = ""
authors = ["Your Name <email@domain.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
requests = "^2.32.3"
aiohttp = "^3.11.10"
asyncio = "^3.4.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
